Fixed image not being centered on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,4 +143,9 @@ body, html {
     .projects-row {
         margin: 0em 0em;
     }
+    .text-center {
+        display: grid;
+        grid-template-rows: 1fr auto auto;
+    }
+    
 }
